23-10-18

Shows audit on calculated fields

Started work on pending uploads area (currently hidden to users)

When importing removes the ' mark on excel cells that start ' and have no other '


22-10-18-3

CPU and memory report added, bug fix to keep user menus linked when loading a DB from a backup file


22-10-18-2

ZK optimiseation to put our code in their PostImporter. Should allow inserting of lines faster.

Bug fix when auditing multiple worksheets


22-10-18

Added this file!

Bug fixing resolving choices and queries - was only clearing the formula result cache when a number - clearly wrong!

Improved error messages on importing

User choices ignore az_ so if date set in one place from a dropdown as az_datechoice it will be picked up by datechoice and vice versa

Adding data to a list (column headings but no row headings) now also works going right rather than down with row headings but no column headings

When importing, fixed bug in calculating compositions where the child value is a blank string, improvements to composition dependency (resolve cells in the correct order)

Standardise dates when converting an Excel file for importing

Cap ZK rows at 5k, we should use the Excel Add In for large numbers of cells

Download database icon better


11-10-18

More URL security tightening

Improvements to 'composition' and new 'lookup' function in import

new 'lookup' function and exception catch on testing attribute as name in import

new fields for 'lookup' function

Code tidying, removed some redundant calls, no more depreciated warnings on compile, some removal of string literals, trying to get rid of some of the "todo"s. Started on the directory scanning code for Ed Broking

Ed Broking login page build version, patch files fix for deployment (auto open for Excel Javascript plugin)


08-10-18

Improved chances of maintaining user sessions across code deployment
