@@ -3,6 +3,7 @@ dev.machine=false
 not.mysql = false;
 scandir=
 scanbusiness=
+scanparams=
 patchfilessource=
 
 # Edd's old machine
@@ -14,6 +15,8 @@ linux-8bsg.azquo.home=/home/edward
 linux-8bsg.dev.machine=true
 linux-8bsg.scandir=/home/edward/filestoimport
 linux-8bsg.scanbusiness=Magento
+#this one is hacky I know . . .
+linux-8bsg.scanparams=Import Template|Import template 1,Import template 2,Import template 3|Month|Jan-18,Feb-18,Mar-18,Apr-18,May-18,Jun-18,Jul-18,Aug-18,Sep-18,Oct-18,Nov-18,Dec-18
 linux-8bsg.patchfilessource=/home/edward/patchfiles
 
 # Bill's new machine
